# services/manager/backend/internal/interface/http/openapi/openapi.gen.go
@@ -3,22 +3,9 @@
 package openapi
 
 import (
-	"time"
-
 	"github.com/labstack/echo/v4"
+	"time"
 )
-
-type AuthenticatedUser struct {
-	Bio             *string    `json:"bio"`
-	CreatedAt       time.Time  `json:"created_at"`
-	Email           string     `json:"email"`
-	EmailVerifiedAt time.Time  `json:"email_verified_at"`
-	Id              string     `json:"id"`
-	IsActive        bool       `json:"is_active"`
-	LastLoginAt     *time.Time `json:"last_login_at"`
-	Name            *string    `json:"name"`
-	UpdatedAt       time.Time  `json:"updated_at"`
-}
 
 type ErrorBody struct {
 	Code      *string       `json:"code"`
@@ -42,19 +29,6 @@ type HealthStatus struct {
 
 type HealthSuccessResponse interface{}
 
-type RegisterRequest struct {
-	Email                string `json:"email"`
-	Password             string `json:"password"`
-	PasswordConfirmation string `json:"password_confirmation"`
-}
-
-type RegisterSuccessData struct {
-	ExpiresAt time.Time `json:"expires_at"`
-	Message   string    `json:"message"`
-}
-
-type RegisterSuccessResponse interface{}
-
 type ResponseEnvelope struct {
 	Data   *interface{} `json:"data"`
 	Error  *interface{} `json:"error"`
@@ -62,22 +36,8 @@ type ResponseEnvelope struct {
 	Status string       `json:"status"`
 }
 
-type VerifyRequest struct {
-	Token string `json:"token"`
-}
-
-type VerifySuccessData struct {
-	AuthToken string      `json:"auth_token"`
-	Message   string      `json:"message"`
-	User      interface{} `json:"user"`
-}
-
-type VerifySuccessResponse interface{}
-
 type ServerInterface interface {
 	GetHealth(ctx echo.Context) error
-	PostAuthRegister(ctx echo.Context) error
-	PostAuthVerify(ctx echo.Context) error
 }
 
 func RegisterHandlers(g *echo.Group, si ServerInterface) {
@@ -89,6 +49,4 @@ func RegisterHandlers(g *echo.Group, si ServerInterface) {
 	}
 
 	g.GET("/health", si.GetHealth)
-	g.POST("/auth/register", si.PostAuthRegister)
-	g.POST("/auth/verify", si.PostAuthVerify)
 }
